# ph-navigator

./: .gitignore  .graphifyignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  TODO.md  db-migration-test.md  docker-compose.yml  logs.txt  render.prod.yaml  render.yaml  test.db
backend/: .env.example  .env.poc.example  .instructions.md  README.md  add_dummy_data.py  alembic.ini  api.py  config.py  cors.json  database.py  docker-compose.yml  logging_config.py  main.py  models.py  package-lock.json  pyproject.toml  rate_limiting.py  requirements.txt  schemas.py  test.db  tests.txt
backend/air_table/: routes.py  schema.py  services.py
backend/alembic/: README  README.md  env.py
backend/alembic/db_backups/: backup_20250707_145013.sql  backup_20250707_145050.dump
backend/alembic/held/: README.md  phase5_tenancy_and_shares.sql
backend/alembic/versions/: 003cd631d956_add_apertures.py  02c1612310e1_add_glazing_attributes.py  20260512_0001_baseline.py  20260512_0002_auth_sessions.py  20260512_0003_projects.py  20260512_0004_project_status_items.py  20260512_0005_project_version_drafts.py  20260512_0006_mcp_tokens.py  20260514_0007_catalog_materials.py  20260514_0008_catalog_materials_rec_ids.py  20260514_0009_catalog_frame_and_glazing.py  20260524_0010_user_table_views.py  20260526_0011_project_assets_and_jobs.py  20260526_0012_user_units_preference.py  20260526_0013_project_lifecycle.py  20260603_0014_catalog_color_rename.py  (+57 more)
backend/auth/: routes.py  schema.py  services.py
backend/db_entities/: project.py  relationships.py  user.py
backend/logs/: _logging_config.py
backend/project/: routes.py  schema.py  services.py
backend/project_browser/: routes.py
backend/scripts/: README.md  __init__.py  _seed_paths.py  bootstrap_admin.py  check_backend_boundaries.py  check_db.py  check_project_document_upgrade.py  create_poc_db.sh  delete_project.py  ensure_agent_browser.py  import_census_localities.py  init_object_store.py  issue_agent_mcp_token.py  manage_user_access.py  mcp_agent_stdio.py  mcp_stdio.py  seed_agent_browser_fixture.py  seed_climate_bundle.py  seed_dev_db.py  seed_frame_catalog.py  seed_glazing_catalog.py  seed_hbjson_model.py  seed_materials_catalog.py  seed_perf_stress_fixture.py  seed_user.py  smoke_mcp_read.py  sweep_orphaned_assets.py
backend/seeds/: README.md  user.json
backend/tests/: catalog_helpers.py  conftest.py  project_document_helpers.py  status_field_helpers.py  test_access_phase3_deltas.py  test_access_resolver.py  test_access_user_grants.py  test_admin_account_schema.py  test_admin_routes.py  test_admin_service.py  test_aperture_drift_comparator.py  test_aperture_drift_detector.py  test_aperture_drift_route.py  test_aperture_hbjson_export_route.py  test_aperture_hbjson_export_service.py  test_aperture_hbjson_identifiers.py  test_aperture_manufacturer_filters.py  test_aperture_refresh_command.py  test_aperture_u_value_service.py  test_apertures_mcp.py  test_apertures_spec_report.py  test_assets_bulk_download.py  test_assets_locked_version.py  test_assets_mcp.py  test_assets_orphan_sweeper.py  test_assets_registry.py  test_assets_service.py  test_auth.py  test_catalog_field_options.py  test_catalog_field_options_glazing.py  test_catalog_isolation.py  test_catalog_manufacturer_rosters.py  test_catalog_option_jobs.py  test_catalogs.py  test_catalogs_frame_types.py  test_catalogs_frame_types_import.py  test_catalogs_glazing_types.py  test_catalogs_glazing_types_import.py  test_catalogs_materials_duplicate.py  test_catalogs_materials_import.py  (+85 more)
(+4322 files in other folders)
