[project]
name = "ph-navigator-v2-backend"
version = "0.1.0"
description = "PH-Navigator V2 backend — FastAPI service for versioned project documents."
requires-python = ">=3.11"
dependencies = [
    "certifi>=2024.8",
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Alembic uses SQLAlchemy internally for migrations. App code does
    # not use SQLAlchemy ORM/Core for persistence.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.2",
    "cryptography>=43",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "boto3>=1.35",
    "jsonpatch>=1.33",
    "argon2-cffi>=25.1.0",
    "mcp>=1.27.1",
    "structlog>=25.5.0",
    "pypdfium2>=5.8.0",
    "pillow>=12.2.0",
    "python-magic>=0.4.27",
    "honeybee-ph>=1.33.19",
    "ladybug-core>=0.44.49",
    "openpyxl>=3.1.5",
    "honeybee-ref==0.2.1",
    "pillow-heif>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
    "ty>=0.0.35",
    "moto[s3]>=5.2.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
testpaths = ["tests"]
# Coverage is opt-in (run via `make coverage` or `pytest --cov=features
# --cov-report=term-missing`). It adds ~13% wall time and shouldn't gate
# every dev/CI run. See planning/code-reviews/2026-06-08/backend-test-suite-speedup.md.
addopts = ""
markers = [
    "hillandale: heavyweight 52 MB scale-fixture tests (CI runs them; skip locally with -m 'not hillandale')",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]

[tool.ty.environment]
python-version = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["features"]
